...
      backgroundColor="$backgroundHover"
      padding="$4"
    >
      <YStack space="$2">
        <XStack justifyContent="space-between">
          <Text fontSize="$3" color="$textMuted">
            Amount
          </Text>
          <Text fontSize="$3" color="$textMuted">
            Balance: {formatNumber(parseFloat(maxAmount))}
          </Text>
        </XStack>

...
