...
  private readonly SUPPORTED_TOKENS = {
    ETH: {
      symbol: 'ETH',
      address: 'ETH',
      decimals: 18,
    },
    USDC: {
      symbol: 'USDC',
      address: process.env.USDC_TOKEN_ADDRESS!,
      decimals: 6,
    },
    DAI: {
      symbol: 'DAI',
...
